[package]
name = "fzstream-client"
version = "0.1.0"
edition = "2021"
authors = ["William <byteblock6@gmail.com>"]
repository = "https://github.com/0xfnzero/fz-stream-client"
description = "A high-performance QUIC client SDK for real-time Solana event streaming with bincode support"
license = "MIT"
keywords = ["solana", "quic", "streaming", "events", "sdk"]
categories = ["network-programming", "api-bindings", "asynchronous"]
readme = "README.md"

[lib]
name = "fzstream_client"
crate-type = ["cdylib", "rlib"]

[dependencies]
# QUIC and networking
quinn = "0.11.8"
rustls = "0.23.31"
rcgen = "0.14.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Common library
fzstream-common  = { git = "https://github.com/0xfnzero/fzstream-common" }

# Compression
lz4 = "1.24"
zstd = "0.13"

# Utilities
anyhow = "1.0"
log = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = { version = "0.22", features = ["alloc"] }
hex = "0.4"
url = "2.5"

# Solana streaming dependencies
solana-streamer-sdk = "0.3.1"

# Network utilities
socket2 = "0.6.0"

[build-dependencies]
# No build dependencies needed for bincode serialization

[dev-dependencies]
env_logger = "0.11.8"
tokio-test = "0.4"

[features]
default = ["compression", "auto-reconnect"]
compression = []
auto-reconnect = []
metrics = []