[package]
name = "fzstream-client"
version = "1.0.0"
edition = "2021"
authors = ["William <byteblock6@gmail.com>"]
repository = "https://github.com/0xfnzero/fz-stream-client"
description = "A high-performance QUIC client SDK for real-time Solana event streaming with bincode support"
license = "MIT"
keywords = ["solana", "fzstream", "streaming", "events", "sdk"]
categories = ["network-programming", "api-bindings", "asynchronous"]
readme = "README.md"

[lib]
name = "fzstream_client"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
quinn = "0.11.8"
rustls = "0.23.21"
rcgen = "0.14.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Common library
fzstream-common  = { version = "1.0.0" }
# fzstream-common = { workspace = true }

# Compression
lz4 = "1.24"
zstd = "0.13"

# Utilities
anyhow = "1.0"
log = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = { version = "0.22", features = ["alloc"] }
hex = "0.4"
url = "2.5"

# Solana streaming dependencies
solana-streamer-sdk = "0.4.1"

# Network utilities
socket2 = "0.6.0"

# Performance optimization dependencies
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
parking_lot = "0.12"

[build-dependencies]
# No build dependencies needed for bincode serialization

[dev-dependencies]
env_logger = "0.11.8"
tokio-test = "0.4"

[features]
default = ["compression", "auto-reconnect"]
compression = []
auto-reconnect = []
metrics = []

[[example]]
name = "quic_client_test"
path = "examples/quic_client_test.rs"